--- a/JN_JD_Website/website_app/templates/index.html
+++ b/JN_JD_Website/website_app/templates/index.html
@@ -31,6 +31,7 @@
                 </button>
                 <ul class="mobile-nav-links">
                     <li><a href="{% url 'home' %}"><i class="fas fa-home"></i> Home</a></li>
+                    <li><a href="{% url 'view_announcements' %}"><i class="fas fa-bullhorn"></i> Announcements</a></li>
                     <li class="mobile-dropdown">
                         <a href="#" onclick="toggleMobileDropdown(this)"><i class="fas fa-calendar-alt"></i> Events <i class="fas fa-chevron-down"></i></a>
                         <ul class="mobile-dropdown-menu">
@@ -54,13 +55,6 @@
                             <li><a href="{% url 'joinorg' %}"><i class="fas fa-user-plus"></i> Join Organization</a></li>
                         </ul>
                     </li>
-                    <li class="mobile-dropdown">
-                        <a href="#" onclick="toggleMobileDropdown(this)"><i class="fas fa-bullhorn"></i> Announcements <i class="fas fa-chevron-down"></i></a>
-                        <ul class="mobile-dropdown-menu">
-                            <li><a href="{% url 'view_announcements' %}"><i class="fas fa-list"></i> View Announcements</a></li>
-                            <li><a href="{% url 'view_announcements' %}#create"><i class="fas fa-plus"></i> Create Announcement</a></li>
-                        </ul>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -68,6 +62,7 @@
         <!-- Desktop Navigation -->
         <ul class="nav-links desktop-nav">
             <li><a href="{% url 'home' %}"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="{% url 'view_announcements' %}"><i class="fas fa-bullhorn"></i> Announcements</a></li>
             <li class="dropdown">
                 <a href="{% url 'viewevents' %}" class="nav-link {% if request.resolver_match.url_name == 'viewevents' %}active{% endif %}">
                     <i class="fas fa-calendar-alt"></i>
@@ -92,13 +87,6 @@
                     <li><a href="{% url 'vieworgs' %}"><i class="fas fa-list"></i> My Organizations</a></li>
                     <li><a href="{% url 'createorg' %}"><i class="fas fa-plus"></i> Create Organization</a></li>
                     <li><a href="{% url 'joinorg' %}"><i class="fas fa-user-plus"></i> Join Organization</a></li>
-                </ul>
-            </li>
-            <li class="dropdown">
-                <a href="#"><i class="fas fa-bullhorn"></i> Announcements</a>
-                <ul class="dropdown-menu">
-                    <li><a href="{% url 'view_announcements' %}"><i class="fas fa-list"></i> View Announcements</a></li>
-                    <li><a href="{% url 'view_announcements' %}#create"><i class="fas fa-plus"></i> Create Announcement</a></li>
                 </ul>
             </li>
         </ul>
@@ -1101,6 +1089,66 @@
             .profile-dropdown {
                 right: 0;
                 width: 200px;
+            }
+
+            .mobile-menu-content {
+                padding: 4rem 1rem 1rem;
+            }
+
+            .mobile-nav-links a {
+                font-size: 1.1rem;
+                padding: 0.75rem;
+            }
+        }
+
+        @media (max-width: 578px) {
+            #navbar {
+                padding: 0.5rem 0.75rem;
+            }
+
+            .mobile-menu-content {
+                padding: 3.5rem 0.75rem 0.75rem;
+            }
+
+            .mobile-nav-links a {
+                font-size: 1rem;
+                padding: 0.6rem;
+            }
+
+            .mobile-dropdown-menu {
+                padding-left: 0.75rem;
+            }
+
+            .close-menu {
+                top: 1rem;
+                right: 1rem;
+            }
+
+            .profile-dropdown {
+                width: 180px;
+            }
+
+            .profile-dropdown li a,
+            .profile-dropdown li form {
+                padding: 0.6rem 0.75rem;
+                font-size: 0.9rem;
+            }
+
+            .modal-content {
+                padding: 1rem;
+                margin: 0.5rem;
+            }
+
+            .modal-header h2 {
+                font-size: 1.3rem;
+            }
+
+            .tab-buttons, .mobile-tabs {
+                flex-direction: column;
+            }
+
+            .tab-btn, .mobile-tab-btn {
+                width: 100%;
             }
         }
 
