--- a/JN_JD_Website/website_app/templates/viewannouncements.html
+++ b/JN_JD_Website/website_app/templates/viewannouncements.html
@@ -162,6 +162,8 @@
         display: grid;
         gap: 1.5rem;
         padding-top: 1rem;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
         padding-bottom: 1rem;
     }
 
@@ -282,7 +284,7 @@
         color: var(--text-light);
         line-height: 1.8;
         margin-bottom: 1.5rem;
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 
     .announcement-content p {
